# mod-alloc

./: CHANGELOG.md  Cargo.toml  MIGRATING_FROM_DHAT.md  README.md  REPS.md  build.rs  clippy.toml  dhat-heap.json
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: backtraces.rs  basic.rs  bench_overhead.rs  dhat_drop_in.rs  dhat_json.rs  symbolicate.rs
src/: lib.rs
src/backtrace/: arena.rs  capture.rs  hash.rs  mod.rs  raw_mem.rs  stack_bounds.rs  table.rs  walk.rs
src/dhat_compat/: ad_hoc_writer.rs  mod.rs  profiler.rs  stats.rs
src/dhat_json/: frames.rs  mod.rs  writer.rs
src/symbolicate/: mod.rs  report.rs  self_binary.rs  unix.rs  windows.rs
tests/: backtrace_concurrent.rs  backtrace_fuzz.rs  backtrace_real_chain.rs  concurrent_alloc.rs  counters_accuracy.rs  dhat_compat_surface.rs  dhat_json_shape.rs  profiler_delta.rs  reentrancy.rs  smoke.rs  symbolicate_concurrent.rs  symbolicate_self.rs
